Fix publication date alignment on home feed entry (#2962)

--- a/app/assets/stylesheets/2017/views/_home.scss
+++ b/app/assets/stylesheets/2017/views/_home.scss
@@ -90,6 +90,12 @@
       }
     }
 
+    .dt-published {
+      position: absolute;
+      bottom: 10px;
+      left: 10px;
+    }
+
     h1,
     h2 {
       margin: 0;
